--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6"
   },
+  "engines": {
+    "node": "16.13.1",
+    "npm": "8.1.2"
+  },
   "devDependencies": {
     "nodemon": "^2.0.16"
   }
